--- a/Portals/_default/Skins/DNNSummit/css/deving.css
+++ b/Portals/_default/Skins/DNNSummit/css/deving.css
@@ -11,3 +11,39 @@
     text-align: center;
     width: 100%;
 }
+
+
+
+
+
+.sub-header--alert {
+	background-color: #E57D3C;
+	color: #fff;
+	display: none;
+	padding: 20px;
+}
+.sub-header__title {
+	color: inherit;
+	line-height: 1em;
+}
+.sub-header__details {
+	font-size: 16px;
+	text-transform: initial;
+	font-weight: 400;
+	line-height: 1em;
+	margin-top: 1em;
+}
+/*
+.sub-header .container { position: relative; }
+.sub-header__close {
+	background-color: #fff;
+	color: #E57D3C;
+	font-size: 12px;
+	border-radius: 50%;
+	line-height: 1em;
+	padding: 0.5em;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+*/
