--- a/Portals/_default/Skins/DNNSummit/css/content.css
+++ b/Portals/_default/Skins/DNNSummit/css/content.css
@@ -929,7 +929,7 @@
 /* Session Info */
 .session__info {
 	padding: 25px 25px 0;
-	padding-bottom: 25px; /* REMOVE ONCE ROOM NUMBERS ARE ADDED */
+	/*padding-bottom: 25px;*/ /* REMOVE ONCE ROOM NUMBERS ARE ADDED */
 	vertical-align: top;
 	width: 100%;
 }
@@ -961,7 +961,7 @@
 
 	/* Session Room */
 	.session-room {
-		display: none; /* Remove When Room Number Added and remove margin-top off ".session-author and padding-bottom on ".session__info" */
+		/*display: none;*/ /* Remove When Room Number Added and remove margin-top off ".session-author and padding-bottom on ".session__info" */
 		font-size: 16px;
 		font-weight: 300;
 	}
@@ -970,7 +970,7 @@
 
 	/* Author */
 	.session__author {
-		margin-top: 20px; /* REMOVE ONCE ROOM NUMBERS ARE ADDED */
+		/*margin-top: 20px;*/ /* REMOVE ONCE ROOM NUMBERS ARE ADDED */
 		display: none;
     	filter: grayscale(100%);		
     		-webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
